--- a/index.html
+++ b/index.html
@@ -26,13 +26,86 @@
                 
             </div>
             <div>
-                <img class="banner-img" src="./B11A1--assignment-1/assets/hero.png">
+                <img class="banner-img" src="./B11A1--assignment-1/assets/hero.png" alt="banner image">
             </div>
 
         </div>
 
     </header>
     <main>
+        <div class="pillarsOfBangladesh" >
+            <div>
+                <h1 class="pillarsHeading">Pillars of "Bangladesh 2.0"</h1>
+            </div>
+            <div class="pillar-container_box">
+                <div class="pillar-contain">
+                    <img class="inovation_pic" src="./B11A1--assignment-1/assets/card-icon.png" alt="inovation_picture">
+                    <h2 class="innovation_heading">Innovation</h2>
+                    <p>Dolor sit amet consectetur elit.<br> Facilis quas, ducimus labore sequi <br> quos </p>
+                </div>
+
+                <div class="pillar-contain">
+                    <img class="inovation_pic" src="./B11A1--assignment-1/assets/card-icon.png" alt="inovation_picture">
+                    <h2 class="innovation_heading">Innovation</h2>
+                    <p>Dolor sit amet consectetur elit.<br> Facilis quas, ducimus labore sequi <br> quos </p>
+                </div>
+
+                <div class="pillar-contain">
+                    <img class="inovation_pic" src="./B11A1--assignment-1/assets/card-icon.png" alt="inovation_picture">
+                    <h2 class="innovation_heading">Innovation</h2>
+                    <p>Dolor sit amet consectetur elit.<br> Facilis quas, ducimus labore sequi <br> quos </p>
+                </div>
+
+                <div class="pillar-contain">
+                    <img class="inovation_pic" src="./B11A1--assignment-1/assets/card-icon.png" alt="inovation_picture">
+                    <h2 class="innovation_heading">Innovation</h2>
+                    <p>Dolor sit amet consectetur elit.<br> Facilis quas, ducimus labore sequi <br> quos </p>
+                </div>
+
+                
+
+            </div>
+
+
+
+        </div>
+
+         <!-- Vision of Future Section -->
+        <div class="the_Vision_of_Future">
+            <div class="Vision_of_Future_Contain">
+                <h1>The Vision of Future</h1>
+                <p class="vision-futur-paragraph">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            </div>
+
+            <div class="Vision_of_Future_box">
+                <div class="Vision_of_Future_digital">
+                    <img class="inovation_pic" src="./B11A1--assignment-1/assets/card-icon.png" alt="inovation_picture">
+                    <h2 class="digital_heading">Digital Transformation</h2>
+                    <p class="digital_p">Creating a nationwide digital ecosystem to <br> enhance connectivity and access to services for <br> all citizens. </p>
+                    <button class="digital_btns">Learn More</button>
+                </div>
+
+
+                <div class="Vision_of_Future_green">
+                    <img class="inovation_pic" src="./B11A1--assignment-1/assets/card-icon.png" alt="inovation_picture">
+                    <h2 class="digital_heading">Green Energy</h2>
+                    <p class="digital_p">Investments in solar and wind energy to ensure <br> a sustainable and eco-friendly future.</p>
+                    <button class="green_btns">Learn More</button>
+                </div>
+
+
+
+                <div class="Vision_of_Future_modern">
+                    <img class="inovation_pic" src="./B11A1--assignment-1/assets/card-icon.png" alt="inovation_picture">
+                    <h2 class="digital_heading">Modern Infrastructure</h2>
+                    <p class="digital_p">Creating a nationwide digital ecosystem to <br> enhance connectivity and access to services for <br> all citizens. </p>
+                    <button class="modern_btns">Learn More</button>
+                </div>
+
+            </div>
+
+        </div>
+
 
     </main>
     <footer>
