fixed button colour and add fira sans

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
          <!-- Vision of Future Section -->
         <div class="the_Vision_of_Future">
             <div class="Vision_of_Future_Contain">
-                <h1>The Vision of Future</h1>
+                <h1 class="vision_heading">The Vision of Future</h1>
                 <p class="vision-futur-paragraph">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
             </div>
 
