add recent news and donate today section

--- a/index.html
+++ b/index.html
@@ -108,11 +108,90 @@
 
         <div class="special_task_part_Dr_Youmus">
             <p class="sp">The Quota Movement in Bangladesh, led by students in 2018, demanded fairness in public job allocation by opposing the 56% reservation system. It pushed for merit-based opportunities, resulting in the government abolishing quotas for higher government jobs, symbolizing progress towards equality and inclusivity.</p>
-            <h1 class="dYunus">Dr. Muhammad Yunus</h1>
+            <h2 class="dYunus">Dr. Muhammad Yunus</h2>
             <p>Chief Adviser of the People's Republic of Bangladesh</p>
 
         </div>
 
+        <section class="Recent_News">
+            <div section="news_section">
+                <div class="news-content">
+                    <h1>Recent News</h1>
+                    <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+
+                </div>
+
+            </div>
+
+            <div class="recent_news_box_container">
+                <div class="news-box1-contain">
+                    <img id="news-box-img-id" src="./B11A1--assignment-1/assets/satelite.png" alt="satelite">
+                </div>
+
+                <div class="news-box1-written">
+                    <h2>Bangladesh Launches New Satellite</h2>
+                    <img src="./B11A1--assignment-1/assets/al-jazeera.png" alt="al-jazeera">
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                      <button class="read-btn">Read More</button>
+                </div>
+            </div>
+
+
+            <div class="recent_news_box2_container">
+                <div class="news-box1-written">
+                    <h2>Bangladesh Launches New Satellite</h2>
+                    <img src="./B11A1--assignment-1/assets/al-jazeera.png" alt="al-jazeera">
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                      <button class="read-btn">Read More</button>
+                </div>
+                <div class="news-box1-contain">
+                    <img id="news-box-img-id" src="./B11A1--assignment-1/assets/satelite.png" alt="satelite">
+                </div>
+
+            </div>
+
+            <div class="recent_news_box_container">
+                <div class="news-box1-contain">
+                    <img id="news-box-img-id" src="./B11A1--assignment-1/assets/satelite.png" alt="satelite">
+                </div>
+
+                <div class="news-box1-written">
+                    <h2>Bangladesh Launches New Satellite</h2>
+                    <img src="./B11A1--assignment-1/assets/al-jazeera.png" alt="al-jazeera">
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                      <button class="read-btn">Read More</button>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="donate_today">
+            <h2 id="donate-heading-id">Donate Today</h2>
+            <p id="donate-paragraph">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+            <div class="ammount-box-container">
+              <div class="ammount-box">
+                <p>100 Taka</p>
+              </div>
+              <div class="ammount-box">
+                <p>200 Taka</p>
+              </div>
+              <div class="ammount-box">
+                <p>500 Taka</p>
+              </div>
+              <div class="ammount-box">
+                <p>1000 Taka</p>
+              </div>
+            </div>
+            <input type="number"  placeholder="Other Amount (Taka)" name="" id="">
+            <button class="donate-btn" type="reset">Donate Now</button>
+        </section>
+
+        <section>
+            
+        </section>
 
     </main>
     <footer>
