fix recent news bug

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="Vision_of_Future_modern">
                     <img class="inovation_pic" src="./B11A1--assignment-1/assets/card-icon.png" alt="inovation_picture">
                     <h2 class="digital_heading">Modern Infrastructure</h2>
-                    <p class="digital_p">Creating a nationwide digital ecosystem to <br> enhance connectivity and access to services for <br> all citizens. </p>
+                    <p class="digital_p">Building state-of-the-art infrastructure to support <br> economic growth and global competitiveness.</p>
                     <button class="modern_btns">Learn More</button>
                 </div>
 
@@ -190,7 +190,7 @@
         </section>
 
         <section>
-            
+
         </section>
 
     </main>
