fix donate today part background 200 tk and add footer part

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               <div class="ammount-box">
                 <p>100 Taka</p>
               </div>
-              <div class="ammount-box">
+              <div id="ammount200tk" class="ammount-box">
                 <p>200 Taka</p>
               </div>
               <div class="ammount-box">
@@ -189,12 +189,28 @@
             <button class="donate-btn" type="reset">Donate Now</button>
         </section>
 
-        <section>
-
+        <!--  Subscribe-Newsletter -->
+       
+        <section class="Subscribe-Newsletter">
+            <h2 id="subscribe-heading-id">Subscribe Newsletter</h2>
+            <p class="subscribe-p">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology, promoting inclusive growth.</p>
+            <div class="input-container">
+                <input type="text" placeholder="Enter your email" name="" id=""/>
+                <button class="subscribe-btn">Subscribe</button>
+            </div>
+            <p>We promise not to spam you!</p>
         </section>
 
     </main>
-    <footer>
+    <footer class="footer">
+        <h2 id="footer-heading">Bangladesh 2.0</h2>
+        <hr />
+
+        <div class="social-media">
+            <img src="./B11A1--assignment-1/assets/facebook.png" alt="" />
+            <img src="./B11A1--assignment-1/assets/instagram.png" alt="" />
+            <img src="./B11A1--assignment-1/assets/x.png" alt="" />
+          </div>
 
     </footer>
 </body>
