--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./B11A1--assignment-1/assets/Flag_of_Bangladesh.svg.png" type="image/x-icon" />
     <title>BANGLADESH 2.0</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -113,6 +114,7 @@
 
         </div>
 
+         <!-- Recent News -->
         <section class="Recent_News">
             <div section="news_section">
                 <div class="news-content">
@@ -140,29 +142,27 @@
 
             <div class="recent_news_box2_container">
                 <div class="news-box1-written">
-                    <h2>Bangladesh Launches New Satellite</h2>
-                    <img src="./B11A1--assignment-1/assets/al-jazeera.png" alt="al-jazeera">
-                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
-                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <h2>The many records of Tamim for the Tigers</h2>
+                    <img src="./B11A1--assignment-1/assets/daily start logo2.png" alt="daily star">
+                    <p>Tamim Iqbal cleared any lingering confusion over his future with the Bangladesh cricket team yesterday by announcing his retirement from international cricket on Facebook.</p>
                       <button class="read-btn">Read More</button>
                 </div>
                 <div class="news-box1-contain">
-                    <img id="news-box-img-id" src="./B11A1--assignment-1/assets/satelite.png" alt="satelite">
+                    <img  id="news-box-img-id" src="./B11A1--assignment-1/assets/tamim_iqbal_48.jpg" alt="tamim">
                 </div>
 
             </div>
 
             <div class="recent_news_box_container">
                 <div class="news-box1-contain">
-                    <img id="news-box-img-id" src="./B11A1--assignment-1/assets/satelite.png" alt="satelite">
+                    <img id="news-box-img-id" src="./B11A1--assignment-1/assets/news3.png" alt="Berlin">
                 </div>
 
                 <div class="news-box1-written">
-                    <h2>Bangladesh Launches New Satellite</h2>
+                    <h2>Union Berlin appeals court ruling over Bochum goalkeeper hit by lighter</h2>
                     <img src="./B11A1--assignment-1/assets/al-jazeera.png" alt="al-jazeera">
-                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
-                        with a certain degree of justification, be able to speak of humankind as civilized</p>
-                      <button class="read-btn">Read More</button>
+                    <p>Union Berlin is appealing a decision by the German football federation’s sports court to award Bochum a 2-0 victory after Bochum’s goalkeeper was struck with a cigarette lighter during their Bundesliga match in December.</p>
+                    <button class="read-btn">Read More</button>
                 </div>
             </div>
 
