add opctional part

--- a/index.html
+++ b/index.html
@@ -114,6 +114,48 @@
 
         </div>
 
+         <!-- Your Opinion Matters part-->
+         <section class="opinion-section">
+            <h2 class="opinion-heading">Your Opinion Matters</h2>
+            <div class="opinion-table">
+                <div class="table-header">
+                    <div class="table-cell">Questions</div>
+                    <div class="table-cell">Select Your Opinion</div>
+                </div>
+                <div class="table-row">
+                    <div class="table-cell">Do you believe Bangladesh is on the right path toward becoming a developed nation?</div>
+                    <div class="table-cell">
+                        <select class="opinion-select">
+                            <option value="agree">Yes, I Agree</option>
+                            <option value="disagree">No, I Disagree</option>
+                            <option value="neutral">Neutral</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="table-row">
+                    <div class="table-cell">Do you believe Bangladesh is on the right path toward becoming a developed nation?</div>
+                    <div class="table-cell">
+                        <select class="opinion-select">
+                            <option value="agree">Yes, I Agree</option>
+                            <option value="disagree">No, I Disagree</option>
+                            <option value="neutral">Neutral</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="table-row">
+                    <div class="table-cell">Do you believe Bangladesh is on the right path toward becoming a developed nation?</div>
+                    <div class="table-cell">
+                        <select class="opinion-select">
+                            <option value="agree">Yes, I Agree</option>
+                            <option value="disagree">No, I Disagree</option>
+                            <option value="neutral">Neutral</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+
          <!-- Recent News -->
         <section class="Recent_News">
             <div section="news_section">
