add explanation in pillar part

--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
                 <div class="pillar-contain">
                     <img class="inovation_pic" src="./B11A1--assignment-1/assets/card-icon.png" alt="inovation_picture">
                     <h2 class="innovation_heading">Innovation</h2>
-                    <p>Dolor sit amet consectetur elit.<br> Facilis quas, ducimus labore sequi <br> quos </p>
+                    <p>Driving growth through creativity, technology, and new solutions to achieve sustainable progress. </p>
                 </div>
 
                 <div class="pillar-contain">
                     <img class="inovation_pic" src="./B11A1--assignment-1/assets/card-icon.png" alt="inovation_picture">
-                    <h2 class="innovation_heading">Innovation</h2>
-                    <p>Dolor sit amet consectetur elit.<br> Facilis quas, ducimus labore sequi <br> quos </p>
+                    <h2 class="innovation_heading">Scalability</h2>
+                    <p>Building systems and processes that expand efficiently to meet growing national demands. </p>
                 </div>
 
                 <div class="pillar-contain">
                     <img class="inovation_pic" src="./B11A1--assignment-1/assets/card-icon.png" alt="inovation_picture">
-                    <h2 class="innovation_heading">Innovation</h2>
-                    <p>Dolor sit amet consectetur elit.<br> Facilis quas, ducimus labore sequi <br> quos </p>
+                    <h2 class="innovation_heading">Infrastructure</h2>
+                    <p>Developing modern transport, energy, and communication networks to enhance connectivity and quality of life. </p>
                 </div>
 
                 <div class="pillar-contain">
                     <img class="inovation_pic" src="./B11A1--assignment-1/assets/card-icon.png" alt="inovation_picture">
-                    <h2 class="innovation_heading">Innovation</h2>
-                    <p>Dolor sit amet consectetur elit.<br> Facilis quas, ducimus labore sequi <br> quos </p>
+                    <h2 class="innovation_heading">Empowerment</h2>
+                    <p>Uplifting communities through education, equality, and access to opportunities for a thriving society.</p>
                 </div>
 
                 
