add explanation in pillar part

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
                 <div class="pillar-contain">
                     <img class="inovation_pic" src="./B11A1--assignment-1/assets/card-icon.png" alt="inovation_picture">
-                    <h2 class="innovation_heading">Scalability</h2>
-                    <p>Building systems and processes that expand efficiently to meet growing national demands. </p>
+                    <h2 class="innovation_heading">Sustainability</h2>
+                    <p>Ensuring responsible use of resources, promoting renewable energy, and fostering eco-friendly practices for a sustainable future.</p>
                 </div>
 
                 <div class="pillar-contain">
