--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./B11A1--assignment-1/assets/Flag_of_Bangladesh.svg.png" type="image/x-icon" />
     <title>BANGLADESH 2.0</title>
+    <!-- google font link -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -119,7 +124,7 @@
 
         </div>
 
-        <div class="special_task_part_Dr_Youmus">
+        <div class="quata_d">
             <p class="sp">The Quota Movement in Bangladesh, led by students in 2018, demanded fairness in public job
                 allocation by opposing the 56% reservation system. It pushed for merit-based opportunities, resulting in
                 the government abolishing quotas for higher government jobs, symbolizing progress towards equality and
