add hover in cart

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
         </section>
 
-        <section class="donate_today">
+        <section class="Donate-For-Bangladesh">
             <h2 id="donate-heading-id">Donate Today</h2>
             <p id="donate-paragraph">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge
                 technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable
