working on card

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                 <div class="Vision_of_Future_digital">
                     <img class="inovation_pic" src="./B11A1--assignment-1/assets/card-icon.png" alt="inovation_picture">
                     <h2 class="digital_heading">Digital Transformation</h2>
-                    <p class="digital_p">Creating a nationwide digital ecosystem to <br> enhance connectivity and access
-                        to services for <br> all citizens. </p>
+                    <p class="digital_p">Creating a nationwide digital ecosystem to enhance connectivity and access
+                        to services for all citizens. </p>
                     <button class="digital_btns">Learn More</button>
                 </div>
 
@@ -105,7 +105,7 @@
                 <div class="Vision_of_Future_green">
                     <img class="inovation_pic" src="./B11A1--assignment-1/assets/card-icon.png" alt="inovation_picture">
                     <h2 class="digital_heading">Green Energy</h2>
-                    <p class="digital_p">Investments in solar and wind energy to ensure <br> a sustainable and
+                    <p class="digital_p">Investments in solar and wind energy to ensure a sustainable and
                         eco-friendly future.</p>
                     <button class="green_btns">Learn More</button>
                 </div>
@@ -115,7 +115,7 @@
                 <div class="Vision_of_Future_modern">
                     <img class="inovation_pic" src="./B11A1--assignment-1/assets/card-icon.png" alt="inovation_picture">
                     <h2 class="digital_heading">Modern Infrastructure</h2>
-                    <p class="digital_p">Building state-of-the-art infrastructure to support <br> economic growth and
+                    <p class="digital_p">Building state-of-the-art infrastructure to support economic growth and
                         global competitiveness.</p>
                     <button class="modern_btns">Learn More</button>
                 </div>
